editing delete funtionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
     <div class="center-align">
         <h3 class>Manage Your Phonebook</h3>
-        <a href="#modal1" class="waves-effect waves-light btn modal-trigger">Add Contact</a>
+        <a href="#modal1" class="waves-effect waves-light btn modal-trigger">Add Contact</a><br><br>
+        <button class="waves-effect waves-light btn" id="sort-btn-name">Sort By Name</button>
+        <button class="waves-effect waves-light btn" id="sort-btn-address">Sort By City</button>
     </div>
 
     <div class="content">
@@ -57,23 +59,7 @@
         </div>
         
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    
-
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
@@ -101,5 +87,4 @@
 
     </script>
 </body>
-
 </html>
